--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-Django==5.0.7
-djangorestframework==3.15.2
-dj-database-url==2.2.0
-psycopg2-binary==2.9.9
-gunicorn==22.0.0
-whitenoise==6.7.0
-django-cors-headers==4.4.0
-Pillow>=10.0
+Django>=4.2,<5.0
+gunicorn>=22.0
+whitenoise>=6.6
+dj-database-url>=2.1
+psycopg2-binary>=2.9
+
+# Storage a Spaces (S3)
+django-storages>=1.14.2
+boto3>=1.34
+
+# API
+djangorestframework>=3.15
+django-cors-headers>=4.4
