--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
 Django>=4.2,<5.0
-gunicorn>=22.0
-whitenoise>=6.6
-dj-database-url>=2.1
+dj-database-url>=2.2.0
 psycopg2-binary>=2.9
-
-# Storage a Spaces (S3)
-django-storages>=1.14.2
-boto3>=1.34
-
-# API
 djangorestframework>=3.15
-django-cors-headers>=4.4
 python-dotenv==1.0.1
+whitenoise>=6.7.0
+django-cors-headers>=4.4.0
+django-storages[boto3]>=1.14.4
+boto3>=1.34.0
+gunicorn>=21.2.0
