--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,11 @@ django-cors-headers>=4.4.0
 django-storages[boto3]>=1.14.4
 boto3>=1.34.0
 gunicorn>=21.2.0
+Django>=4.2
+gunicorn>=21.2.0
+whitenoise>=6.7.0
+dj-database-url>=2.2.0
+django-cors-headers>=4.4.0
+django-storages[boto3]>=1.14.4
+boto3>=1.34.0
+psycopg2-binary>=2.9
