--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,10 @@
-Django>=4.2,<5.0
-dj-database-url>=2.2.0
-psycopg2-binary>=2.9
-djangorestframework>=3.15
-python-dotenv==1.0.1
-whitenoise>=6.7.0
-django-cors-headers>=4.4.0
-django-storages[boto3]>=1.14.4
-boto3>=1.34.0
-gunicorn>=21.2.0
-Django>=4.2
-gunicorn>=21.2.0
-whitenoise>=6.7.0
-dj-database-url>=2.2.0
-django-cors-headers>=4.4.0
-django-storages[boto3]>=1.14.4
-boto3>=1.34.0
-psycopg2-binary>=2.9
+Django==4.2.11
+djangorestframework==3.15.2
+gunicorn==22.0.0
+whitenoise==6.6.0
+psycopg2-binary==2.9.9
+boto3==1.34.82
+django-storages==1.14.2
+dj-database-url==2.2.0
+django-cors-headers==4.4.0
+python-dateutil==2.9.0
